--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,7 @@ on:
 env:
   MONGODB_DB_NAME: gha-demo
 jobs:
+  environment: testing
   test:
     env:
       MONGODB_CLUSTER_ADDRESS: gha-demo.kzodu0f.mongodb.net
